--- a/.gitattributes
+++ b/.gitattributes
@@ -3,3 +3,7 @@
 *.pdb filter=lfs diff=lfs merge=lfs -text
 *.exp filter=lfs diff=lfs merge=lfs -text
 *.ilk filter=lfs diff=lfs merge=lfs -text
+*.ico filter=lfs diff=lfs merge=lfs -text
+*.png filter=lfs diff=lfs merge=lfs -text
+*.webm filter=lfs diff=lfs merge=lfs -text
+*.webp filter=lfs diff=lfs merge=lfs -text
